--- a/project4_stock.ipynb
+++ b/project4_stock.ipynb
@@ -24,7 +24,7 @@
    "id": "6b25f006",
    "metadata": {},
    "source": [
-    "### Initial investments\n",
+    "### Initial Investments\n",
     "<table>\n",
     "    <tr>\n",
     "        <th> Company </th>\n",
@@ -106,8 +106,126 @@
    "id": "b6c03f12",
    "metadata": {},
    "source": [
-    "## (11/26) Week 2"
+    "## (11/26) Week 2 In the Red"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b35e6fd6",
+   "metadata": {},
+   "source": [
+    "I had many other obligations this week such as a final exam in another class, other projects, and spending the Holiday with family so I was unable to spend as much time as I would have liked to on my stocks. Consequently, I am currently at a loss in my investments. My account is valued at 245,784.00 dollars; which is 5,000 dollars less than last week's initial starting balance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f35094b3",
+   "metadata": {},
+   "source": [
+    "### End of Week's Investments\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th> Company </th>\n",
+    "        <th> Purchase Price </th>\n",
+    "        <th> Current Price </th>\n",
+    "        <th> Qty </th>\n",
+    "        <th> Total Cost </th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td> BA Boeing Co. </td>\n",
+    "        <td> \\$213.38 </td>\n",
+    "        <td> \\$199.21 </td>\n",
+    "        <td> 200 </td>\n",
+    "        <td> \\$39,842.00 </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td> OKTA Okta Inc. </td>\n",
+    "        <td> \\$241.68 </td>\n",
+    "        <td> \\$222.69 </td>\n",
+    "        <td> 100 </td>\n",
+    "        <td> \\$24,168.00 </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td> SCHW Charles Schwab Corp. </td>\n",
+    "        <td> \\$79.15 </td>\n",
+    "        <td> \\$79.15 </td>\n",
+    "        <td> 100 </td>\n",
+    "        <td> \\$7,915.00 </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td> JNJ Johnson & Johnson </td>\n",
+    "        <td> \\$159.20 </td>\n",
+    "        <td> \\$159.20 </td>\n",
+    "        <td> 1 </td>\n",
+    "        <td> \\$159.20 </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td> MA Mastercard Inc. </td>\n",
+    "        <td> \\$324.17 </td>\n",
+    "        <td> \\$324.17 </td>\n",
+    "        <td> 1 </td>\n",
+    "        <td> \\$324.17 </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fa880af",
+   "metadata": {},
+   "source": [
+    "The stock market being closed for Thanksgiving really saw the value of stocks decrease greatly. Prior to the holiday, they were soaring; yet, immediately afterwards, there was a steep decline. Boeing and Okta both experienced this with thier price decreasing to below the point at which I purchased them. I am going to hold on to these two though as I expect them two increase once again."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3ee54a1",
+   "metadata": {},
+   "source": [
+    "I decided to purchase stocks of both Mastercard and Johnson and Johnson as an indicator to see how well they do. If I notice them begin to climb when the market opens again, I will purchase more and hope to gain a sizable profit to get out of the red."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53ec8a18",
+   "metadata": {},
+   "source": [
+    "### End of week's Sales\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th> Company </th>\n",
+    "        <th> Purchase Price </th>\n",
+    "        <th> Sale Price </th>\n",
+    "        <th> Qty </th>\n",
+    "        <th> Initial Cost </th>\n",
+    "        <th> Profit </th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td> WMT Walmart Inc. </td>\n",
+    "        <td> \\$142.32 </td>\n",
+    "        <td> \\$144.90 </td>\n",
+    "        <td> 200 </td>\n",
+    "        <td> \\$28,464.00 </td>\n",
+    "        <td> \\$516.00 </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dc7af4a",
+   "metadata": {},
+   "source": [
+    "When I finally got to checking my stocks, I saw that i missed the peak time to sell Walmart, however, I still made a profit and decided to sell because the price was falling to before the price of my initial purchase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "892faa1e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
