--- a/project4_stock.ipynb
+++ b/project4_stock.ipynb
@@ -930,63 +930,15 @@
    "id": "51a6934c",
    "metadata": {},
    "source": [
-    "## (12/10) Week 4"
+    "## (12/10) Week 4 End of Game"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13ba13a3",
+   "id": "6c837f9e",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "This is the final week of the stock project. I was not aware that the game ending on the 10th would mean that it would end at the start of the 10th rather than the end; therefore meaning, I still thought that we this Friday as the last day to trade. I was also not aware that the when the game ended, I would no longer be able to access any data on my trades anymore. Consequently, this week's analysis can not be done without the relevant data to analyze."
    ]
   }
  ],
